examples/test/testpolicy887.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy887
  namespace: namespace14
spec:
  podSelector:
    matchLabels:
      key16: value3
      key1: value7
      key45: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value9
          key23: value48
          key41: value44
      podSelector:
        matchLabels:
          key6: value48
          key46: value15
